db삽입 시간 최적화